# dlltest

./: CMakeLists.txt  a.cpp  a.h  b.cpp  b.h  c.cpp  c.h  c2.cpp  c2.h  d.cpp  d.h  d2.cpp  d2.h  test-2012.bat  test-2013.bat  test-2015.bat  test.bat  testa.cpp  testall.cpp  testb.cpp  testc.cpp
b2/: bexport.h  cexport.h
b3/: aexport.h  dexport.h
